feat(tutorial): complete step 2

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@carbon/react": "^1.35.0",
+    "carbon-components": "^10.58.15",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
